Edit index.html to have different writeup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>NUS SEDS</title>
+  <title>SEDS Singapore</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">NUS SEDS</a> -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">NUS SEDS</a>
+      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">SEDS SG</a> -->
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">SEDS SG</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -46,9 +46,6 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#events">Events</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
@@ -63,7 +60,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto text-white my-0 mb-2 text-uppercase">NUS SEDS</h1>
+        <h1 class="mx-auto text-white my-0 mb-2 text-uppercase">SEDS SG</h1>
         <h2 class="text-white-50 mx-auto mt-2">Students for the Exploration and Development of Space</h2>
 
       </div>
@@ -94,14 +91,34 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/lunarroversc.jpg" alt="">
+          <img class="img-fluid" src="img/weather_balloon.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="mb-4 text-white">Rover Project</h4>
-                <p class="mb-4 text-white-50"><i>New Opportunity</i> is NUS SEDS' flagship project. We aim to design and build a Remotely Operated Vehicle (ROV) that can accomplish a variety of tasks. Such a rover may one day assist astronauts on the surface of the Moon, or Mars!</p>
+                <h4 class="mb-4 text-white">High Altitude Weather Balloons</h4>
+                <p class="mb-4 text-white-50">In 2020, we plan to send up a balloon into the atmosphere. This is an exciting project for space enthusiasts. We're looking for tinkerers, inventors, and people who want to make a difference in space.</p>
+                <a href="https://forms.gle/UrVJqc1bg4wzgz6P6" class="btn btn-dark">Sign up</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+      <br/>
+
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/sounding_rocket.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="mb-4 text-white">Sounding Rocket</h4>
+                <p class="mb-4 text-white-50">A sounding rocket is a rocket used to carry payloads into the higher atmosphere. By 2022, we aim to build a sounding rocket - the first of its kind in Southeast Asia - and launch it successfully. A one-of-a-kind project, the sounding rocket promises to be a technically challenging and intellectually stimulating venture for all invovled.</p>
                 <a href="https://forms.gle/UrVJqc1bg4wzgz6P6" class="btn btn-dark">Sign up</a>
               </div>
             </div>
@@ -114,34 +131,6 @@
     </div>
   </section>
 
-  <!-- Events Section -->
-  <section id="events" class="projects-section bg-black">
-    <div class="container">
-        <h1 class="text-white mb-5">Our Events</h1>
-
-        <!-- Project Two Row -->
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/earth_from_space.jpg" alt="">
-          </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="mb-4 text-white">Events and Talks</h4>
-                  <p class="mb-4 text-white-50">We organise a series of talks and activites that bridge students, industry, government and academia. These events provide a platform for students to get up close and personal with prominent personalities in the space industry, mingle with like-minded space enthusiasts and expand their horizons!</p>
-                  <a href="/events" class="btn btn-dark">Check out events</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-    </div>
-  </section>
-
-
-
   <!-- Contacts Section -->
   <section id="team" class="contact-section bg-black">
     <div class="container">
@@ -152,7 +141,7 @@
             <div class="card-body text-center">
               <i class="fas fa-space-shuttle text-white mb-2"></i>
               <h4 class="text-uppercase m-0 text-white mb-2">Ramu Vairavan</h4>
-              <div class="small text-white">President</div>
+              <div class="small text-white">Founder</div>
               <hr class="my-4">
               <div class="small text-white">ramu@nusseds.space</div>
             </div>
@@ -163,11 +152,11 @@
           <div class="card py-4 h-100 bg-dark">
             <div class="card-body text-center">
               <i class="fas fa-space-shuttle text-white mb-2"></i>
-              <h4 class="text-uppercase m-0 text-white mb-2">Yeoh Jun Kai</h4>
-              <div class="small text-white">Vice-President</div>
+              <h4 class="text-uppercase m-0 text-white mb-2">Nick Lee</h4>
+              <div class="small text-white">Founder</div>
               <hr class="my-4">
               <div class="small text-white">
-                <a href="#" class="text-white">junkai@nusseds.space</a>
+                <a href="#" class="text-white">nick@nusseds.space</a>
               </div>
             </div>
           </div>
@@ -177,10 +166,10 @@
           <div class="card py-4 h-100 bg-dark">
             <div class="card-body text-center">
               <i class="fas fa-hands-helping text-white mb-2"></i>
-              <h4 class="text-uppercase m-0 text-white mb-2">Mission Control</h4>
+              <h4 class="text-uppercase m-0 text-white mb-2">Ground Control</h4>
               <div class="small text-white">Contact Us</div>
               <hr class="my-4">
-              <div class="small text-white">missioncontrol@nusseds.space</div>
+              <div class="small text-white">groundcontrol@nusseds.space</div>
             </div>
           </div>
         </div>
@@ -254,7 +243,7 @@
         <a href="https://www.instagram.com/nus_seds/" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://www.facebook.com/nusseds/" class="mx-2">
+        <a href="https://www.facebook.com/sgseds/" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="https://t.me/nusseds" class="mx-2">
@@ -268,7 +257,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; NUS SEDS 2019
+      Copyright &copy; SEDS SG 2019
     </div>
   </footer>
 
