--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="img/ipad.png" class="img-fluid" alt="">
-          <h2 class="text-white mb-4">Space: the final frontier.</h2>
+          <h2 class="text-white mb-4">About Us</h2>
           <p class="text-white-50">
-            Humankind has progressed through discovery and exploration. We journeyed through rough seas and uncharted terrain in search of a better life. Space is no different.
-          </br></br>  Space is the final frontier. <b>Our final frontier.</b>
+            SEDS is the largest student-run space organisation in the world, with a presence in 23 countries. It is a chapter-based non-profit promoting space exploration and development through student-led engineering projects, events and programmes. Prominent SEDS alumni include Jeff Bezos, Steve Wozniak and Peter Diamandis. SEDS@NUS is a constituent club of SEDS Earth and SEDS Singapore.
           </p>
         </div>
       </div>
