Update social media links, thanks.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100 bg-dark">
             <div class="card-body text-center">
@@ -240,8 +240,8 @@
       </div> -->
 
       <div class="social d-flex justify-content-center">
-        <a href="https://www.instagram.com/nus_seds/" class="mx-2">
-          <i class="fab fa-twitter"></i>
+        <a href="https://www.instagram.com/seds.ntu/" class="mx-2">
+          <i class="fab fa-instagram"></i>
         </a>
         <a href="https://www.facebook.com/sgseds/" class="mx-2">
           <i class="fab fa-facebook-f"></i>
