--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>NUS SEDS</title>
+  <title>SEDS Singapore</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@ body {background-color: black;}
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">NUS SEDS</a> -->
-      <a class="navbar-brand js-scroll-trigger" href="/">NUS SEDS</a>
+      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">SEDS SG</a> -->
+      <a class="navbar-brand js-scroll-trigger" href="/">SEDS SG</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -48,9 +48,6 @@ body {background-color: black;}
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/">Events</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/">Team</a>
@@ -83,7 +80,7 @@ body {background-color: black;}
 
 
       <div class="bg-black social d-flex justify-content-center">
-        <a href="https://www.instagram.com/nus_seds/" class="mx-2">
+        <a href="https://www.instagram.com/seds.ntu/" class="mx-2">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://www.facebook.com/nusseds/" class="mx-2">
@@ -100,7 +97,7 @@ body {background-color: black;}
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; NUS SEDS 2019
+      Copyright &copy; SEDS SG 2019
     </div>
   </footer>
 
