Add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
         <a href="https://www.facebook.com/sgseds/" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
+        <a href="https://www.linkedin.com/company/seds-sg" class="mx-2">
+          <i class="fab fa-linkedin"></i>
+        </a>
         <a href="https://t.me/nusseds" class="mx-2">
           <i class="fab fa-telegram-plane"></i>
         </a>
