--- a/thanks.html
+++ b/thanks.html
@@ -86,6 +86,10 @@ body {background-color: black;}
         <a href="https://www.facebook.com/nusseds/" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
+      </a>
+      <a href="https://www.linkedin.com/company/seds-sg" class="mx-2">
+        <i class="fab fa-linkedin"></i>
+      </a>
         <a href="https://t.me/nusseds" class="mx-2">
           <i class="fab fa-telegram-plane"></i>
         </a>
