--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Us</h2>
           <p class="text-white-50">
-            SEDS is the largest student-run space organisation in the world, with a presence in 23 countries. It is a chapter-based non-profit promoting space exploration and development through student-led engineering projects, events and programmes. Prominent SEDS alumni include Jeff Bezos, Steve Wozniak and Peter Diamandis. SEDS@NUS is a constituent club of SEDS Earth and SEDS Singapore.
+            SEDS is the largest student-run space organisation in the world, with a presence in 23 countries. It is a chapter-based non-profit promoting space exploration and development through student-led engineering projects, events and programmes. Prominent SEDS alumni include Jeff Bezos, Steve Wozniak and Peter Diamandis. NUS SEDS and SEDS-NTU are constituent clubs of SEDS Earth and SEDS Singapore.
           </p>
         </div>
       </div>
@@ -142,7 +142,7 @@
               <div class="small text-white">Founder</div>
               <hr class="my-4">
               <div class="small text-white">
-                <a href="#" class="text-white">nick@nusseds.space</a>
+                <a href="#" class="text-white">nick@seds-sg.space</a>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
               <h4 class="text-uppercase m-0 text-white mb-2">Ramu Vairavan</h4>
               <div class="small text-white">Founder</div>
               <hr class="my-4">
-              <div class="small text-white">ramu@nusseds.space</div>
+              <div class="small text-white">ramu@seds-sg.space</div>
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
               <h4 class="text-uppercase m-0 text-white mb-2">Ground Control</h4>
               <div class="small text-white">Contact Us</div>
               <hr class="my-4">
-              <div class="small text-white">groundcontrol@nusseds.space</div>
+              <div class="small text-white">groundcontrol@seds-sg.space</div>
             </div>
           </div>
         </div>
