Update index.html Update index.html to use "High Altitude Balloon Experiment" instead of "Weather Balloons" and corrected grammatical mistake in description.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="mb-4 text-white">High Altitude Weather Balloons</h4>
-                <p class="mb-4 text-white-50">In 2020, we plan to send up a balloon into the atmosphere. This is an exciting project for space enthusiasts. We're looking for tinkerers, inventors, and people who want to make a difference in space.</p>
+                <h4 class="mb-4 text-white">High Altitude Balloon Experiment</h4>
+                <p class="mb-4 text-white-50">In 2020, we plan to send a balloon up into the atmosphere. This is an exciting project for space enthusiasts. We're looking for tinkerers, inventors, and people who want to make a difference in space.</p>
                 <a href="http://bit.ly/projnewdawn" class="btn btn-dark">Sign up</a>
               </div>
             </div>
