Add Landscape Study

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#landscape">Landscape Study</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
@@ -62,10 +65,45 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto text-white my-0 mb-2 text-uppercase">SEDS SG</h1>
         <h2 class="text-white-50 mx-auto mt-2">Students for the Exploration and Development of Space</h2>
+        <a class="text-red mx-auto mt-2 nav-link js-scroll-trigger" href="#landscape">Check out our new Landscape Study!</a>
+
 
       </div>
     </div>
   </header>
+
+    <!-- Release Section -->
+  <!-- Projects Section -->
+  <section id="landscape" class="projects-section bg-black">
+    <div class="container">
+        <h1 class="text-white mb-5">Space Policy Unit</h1>
+
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/insights.jpeg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="mb-4 text-white">Landscape Study</h4>
+                <p class="mb-4 text-white-50">Over the summer of 2020, we carried out a project wherein we consolidated the views of the various stakeholders in Singapore's Space Ecosystem. In this report, we raise the diverse opinions of companies and experts from all levels of Singapore's space ecosystem. Use this report to understand what Singapore's space players feel about the opportunities and challenges she has ahead of her. Space is still heavily reliant on government actors and large companies, who chart a country's course in space by setting effective policy and implementing supportive measures. In order to do so, a holistic approach needs to be taken - one which includes diverse viewpoints and detailed analysis.</p>
+
+<p class="mb-4 text-white-50">At the Space Policy Unit, our diverse range of members discuss space-related topics which affect Singapore and the region around us. We also publish our work so that they can be used by interested parties to push humanity forward the ongoing space revolution.</p>
+
+<p class="mb-4 text-white-50">Reach out to us if you're interested in working with us on developing space policy papers about pertinent issues. </p>
+                <a href="img/report_october.pdf" class="btn btn-dark">Download the Report</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+      <br/>
+
+    </div>
+  </section>
 
   <!-- About Section -->
   <section id="about" class="about-section text-center">
