Change seds-SUTD logo

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100 bg-dark">
             <div class="card-body text-center">
-             <img src="img/SEDS-SUTD.png" alt="" height="75" style="margin-bottom: 20px;">
+             <img src="img/seds-sutd.png" alt="" height="75" style="margin-bottom: 20px;">
               <div class="small small" style="color:rgba(255,255,255,.5)">SEDS-SUTD</div>
             </div>
           </div>
